Use GitHub run number as build number

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ archivesBaseName = project.name
 def baseVersion = '1.1'
 
 def ENV = System.getenv()
-if (ENV.BUILD_NUMBER) {
-	version = baseVersion + '.' + ENV.BUILD_NUMBER
+if (ENV.GITHUB_RUN_NUMBER) {
+	version = baseVersion + '.' + ENV.GITHUB_RUN_NUMBER
 } else {
 	version = baseVersion + '.local'
 }
