--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -1,5 +1,5 @@
 name: Run Tests
-on: [push, pull_request]
+on: workflow_dispatch
 
 concurrency:
   group: build-${{ github.event.pull_request.number || github.ref }}
